# MemoryScanEngine

./: .gitignore  README.md
ARM64Scanner/: README.md
ARM64ScannerForQt/: CMakeLists.txt  Function.cmake  README.md  main.cpp
ARM64ScannerForQt/DataDefine/: SearchDataDefine.h
ARM64ScannerForQt/Resources/: ARM64Scanner.qrc
ARM64ScannerForQt/UIModule/: MainWidget.cpp  MainWidget.h  MainWidget.ui
ARM64ScannerForQt/UIModule/BaseUI/: IDialogDragShadow.cpp  IDialogDragShadow.h  IWidgetDragShadow.cpp  IWidgetDragShadow.h  IWidgetUtil.cpp  IWidgetUtil.h
MemScanner/: CMakeLists.txt  README.md  build_msvc2015_64.bat  main.cpp
MemScanner/Common/: MemoryMerge.cpp  MemoryMerge.h
MemScanner/DataDefine/: ScannerDataDefine.h
MemScanner/Scan/: Scanner.cpp  Scanner.h  SystemMemory.h  SystemMemory_linux.cpp  SystemMemory_windows.cpp  TimeWatch.cpp  TimeWatch.h
